loading and processing video

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div>
-            <video src = "./alpaca_green.mov" autoplay></video>
+            <video id = "video" src = "./alpaca_green.mov" autoplay></video>
         </div>
 
         <!-- Original Video -->
@@ -17,7 +17,7 @@
 
         <!-- Modified Video -->
         <canvas id = "c2" width = "1920" height = "1080"></canvas> 
-        
+
         <script src = "./app.js"></script>
     </body>
 </html> 
