finish loading + enable user controls

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div>
-            <video id = "video" src = "./alpaca_green.mov" autoplay></video>
+            <video id = "video" src = "./alpaca_green.mov" controls></video>
         </div>
 
         <!-- Original Video -->
